--- a/exampleFilter/.project
+++ b/exampleFilter/.project
@@ -4,6 +4,9 @@
 	<comment></comment>
 	<projects>
 		<project>resources</project>
+		<project>bootstrapextracomponents</project>
+		<project>servoy-extra-components</project>
+		<project>svychartjs</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
