Fix bootstapextracomponent link

--- a/exampleFilter/.project
+++ b/exampleFilter/.project
@@ -8,6 +8,7 @@
 		<project>exampleDataModel</project>
 		<project>svyMicroSamples</project>
 		<project>exampleSharedWebPackages</project>
+		<project>bootstrapextracomponents</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
